kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modresorts
  labels:
    name: modresorts
